--- a/index.html
+++ b/index.html
@@ -1,39 +1,158 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Katalog Produk</title>
-    <style>
-        body { font-family: Arial; background:#f4f4f4; margin:0; }
-        header { background:#2c3e50; color:white; text-align:center; padding:20px; }
-        .container { display:flex; gap:20px; padding:30px; flex-wrap:wrap; }
-        .card { background:white; padding:15px; border-radius:8px; width:250px; box-shadow:0 4px 8px rgba(0,0,0,0.1); }
-        .card img { width:100%; border-radius:8px; }
-        .price { color:#e74c3c; font-weight:bold; }
-        button { background:#3498db; color:white; border:none; padding:8px; border-radius:5px; cursor:pointer; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Katalog Produk - Promo</title>
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f8f9fa;
+    color: #333;
+}
+
+header {
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    color: white;
+    padding: 40px 20px;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 36px;
+}
+
+header p {
+    margin-top: 10px;
+    opacity: 0.9;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 40px auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+}
+
+.card {
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+    transition: 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+}
+
+.card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.card h3 {
+    margin-bottom: 10px;
+}
+
+.price {
+    color: #e63946;
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.card p {
+    font-size: 14px;
+    margin-bottom: 15px;
+    color: #555;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #1e3c72;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #16325c;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #1e3c72;
+    color: white;
+    margin-top: 40px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-    <h1>Katalog Produk</h1>
+    <h1>Katalog Promo Produk</h1>
+    <p>Temukan Penawaran Terbaik Hari Ini</p>
 </header>
 
 <div class="container">
+
     <div class="card">
-        <img src="https://via.placeholder.com/250x150">
-        <h3>Produk A</h3>
-        <p class="price">Rp 150.000</p>
-        <button>Beli</button>
+        <img src="https://via.placeholder.com/400x300" alt="Produk 1">
+        <div class="card-body">
+            <h3>Produk Premium A</h3>
+            <div class="price">Rp 150.000</div>
+            <p>Produk berkualitas tinggi dengan desain modern dan elegan.</p>
+            <button>Beli Sekarang</button>
+        </div>
     </div>
 
     <div class="card">
-        <img src="https://via.placeholder.com/250x150">
-        <h3>Produk B</h3>
-        <p class="price">Rp 200.000</p>
-        <button>Beli</button>
+        <img src="https://via.placeholder.com/400x300" alt="Produk 2">
+        <div class="card-body">
+            <h3>Produk Premium B</h3>
+            <div class="price">Rp 250.000</div>
+            <p>Performa maksimal dengan harga terbaik di kelasnya.</p>
+            <button>Beli Sekarang</button>
+        </div>
     </div>
+
+    <div class="card">
+        <img src="https://via.placeholder.com/400x300" alt="Produk 3">
+        <div class="card-body">
+            <h3>Produk Premium C</h3>
+            <div class="price">Rp 350.000</div>
+            <p>Kualitas unggul untuk kebutuhan profesional dan pribadi.</p>
+            <button>Beli Sekarang</button>
+        </div>
+    </div>
+
 </div>
+
+<footer>
+    © 2026 Promo Katalog | Dibuat oleh Keno
+</footer>
 
 </body>
 </html>
