--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 <title>Katalog Produk - Promo</title>
 
 <style>
-* {
+* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -197,3 +201,4 @@ footer {
 
 </body>
 </html>
+
