--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@ footer {
             <h3>Produk Premium A</h3>
             <div class="price">Rp 150.000</div>
             <p>Produk berkualitas tinggi dengan desain modern.</p>
-            <button>Beli Sekarang</button>
+            <a href="detail-a.html">
+    <button>Lihat Detail</button>
+</a>
         </div>
     </div>
 
@@ -201,4 +203,5 @@ footer {
 
 </body>
 </html>
+
 
