--- a/index.html
+++ b/index.html
@@ -1,207 +1,90 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Katalog Produk - Promo</title>
+    <meta charset="UTF-8">
+    <title>Katalog Produk</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            margin: 0;
+            padding: 20px;
+        }
 
-html {
-    scroll-behavior: smooth;
-}
+        h1 {
+            text-align: center;
+        }
 
-body {
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #f8f9fa;
-    color: #333;
-}
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
 
-/* ===== NAVBAR ===== */
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #1e3c72;
-    padding: 15px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    z-index: 1000;
-}
+        .card {
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+        }
 
-nav .logo {
-    font-size: 20px;
-    font-weight: bold;
-}
+        .price {
+            color: red;
+            font-weight: bold;
+        }
 
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 25px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    transition: 0.3s;
-}
-
-nav ul li a:hover {
-    color: #ffd166;
-}
-
-/* ===== HEADER ===== */
-header {
-    margin-top: 70px;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
-    color: white;
-    padding: 60px 20px;
-    text-align: center;
-}
-
-header h1 {
-    font-size: 36px;
-}
-
-header p {
-    margin-top: 10px;
-    opacity: 0.9;
-}
-
-/* ===== PRODUCT SECTION ===== */
-.container {
-    max-width: 1100px;
-    margin: 40px auto;
-    padding: 0 20px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 25px;
-}
-
-.card {
-    background: white;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.08);
-    transition: 0.3s ease;
-}
-
-.card:hover {
-    transform: translateY(-8px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-}
-
-.card img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-}
-
-.card-body {
-    padding: 20px;
-}
-
-.price {
-    color: #e63946;
-    font-weight: bold;
-    margin-bottom: 10px;
-    font-size: 18px;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #1e3c72;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-button:hover {
-    background-color: #16325c;
-}
-
-/* ===== FOOTER ===== */
-footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #1e3c72;
-    color: white;
-    margin-top: 40px;
-}
-</style>
+        button {
+            margin-top: 10px;
+            padding: 8px 12px;
+            border: none;
+            background: #333;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
 
-<!-- NAVBAR -->
-<nav>
-    <div class="logo">DIANA EVA FURNITURE</div>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#produk">Produk</a></li>
-        <li><a href="#">Tentang</a></li>
-        <li><a href="#">Kontak</a></li>
-    </ul>
-</nav>
-
-<header>
-    <h1>Katalog Promo Produk</h1>
-    <p>Temukan Penawaran Terbaik Hari Ini</p>
-</header>
+<h1>Katalog Produk</h1>
 
 <div class="container" id="produk">
-
-    <div class="card">
-        <img src="https://via.placeholder.com/400x300">
-        <div class="card-body">
-            <h3>Produk Premium A</h3>
-            <div class="price">Rp 150.000</div>
-            <p>Produk berkualitas tinggi dengan desain modern.</p>
-            <a href="detail-a.html">
-    <button>Lihat Detail</button>
-</a>
-        </div>
-    </div>
-
-    <div class="card">
-        <img src="https://via.placeholder.com/400x300">
-        <div class="card-body">
-            <h3>Produk Premium B</h3>
-            <div class="price">Rp 250.000</div>
-            <p>Performa maksimal dengan harga terbaik.</p>
-            <button>Beli Sekarang</button>
-        </div>
-    </div>
-
-    <div class="card">
-        <img src="https://via.placeholder.com/400x300">
-        <div class="card-body">
-            <h3>Produk Premium C</h3>
-            <div class="price">Rp 350.000</div>
-            <p>Kualitas unggul untuk kebutuhan profesional.</p>
-            <button>Beli Sekarang</button>
-        </div>
-    </div>
-
+    <!-- Produk akan muncul di sini -->
 </div>
 
-<footer>
-    © 2026 Promo Katalog | Dibuat oleh Keno
-</footer>
+<script>
+    // DATA PRODUK
+    const products = [
+        {
+            id: 1,
+            name: "Produk A",
+            price: 150000
+        },
+        {
+            id: 2,
+            name: "Produk B",
+            price: 250000
+        }
+    ];
+
+    // AMBIL CONTAINER
+    const container = document.getElementById("produk");
+
+    // LOOPING DATA
+    products.forEach(product => {
+        container.innerHTML += `
+            <div class="card">
+                <h3>${product.name}</h3>
+                <div class="price">Rp ${product.price}</div>
+                <button>Lihat Detail</button>
+            </div>
+        `;
+    });
+</script>
 
 </body>
 </html>
-
-
