--- a/index.html
+++ b/index.html
@@ -1,89 +1,132 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Katalog Produk</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Katalog Produk Dinamis</title>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f5f5f5;
-            margin: 0;
-            padding: 20px;
-        }
+<style>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    background: #f5f5f5;
+}
 
-        h1 {
-            text-align: center;
-        }
+h1 { text-align: center; }
 
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 30px;
+}
 
-        .card {
-            background: white;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-        }
+.card {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
 
-        .price {
-            color: red;
-            font-weight: bold;
-        }
+.price { color: red; font-weight: bold; }
 
-        button {
-            margin-top: 10px;
-            padding: 8px 12px;
-            border: none;
-            background: #333;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+button {
+    margin-top: 10px;
+    padding: 8px 12px;
+    border: none;
+    background: #333;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form {
+    max-width: 500px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+input, textarea {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+</style>
 </head>
 
 <body>
 
-<h1>Katalog Produk</h1>
+<h1>Katalog Produk Dinamis</h1>
+
+<!-- FORM TAMBAH PRODUK -->
+<form id="formTambah">
+    <input type="text" id="namaProduk" placeholder="Nama Produk" required>
+    <input type="number" id="hargaProduk" placeholder="Harga Produk" required>
+    <textarea id="descProduk" placeholder="Deskripsi Produk"></textarea>
+    <button type="submit">Tambah Produk</button>
+</form>
 
 <div class="container" id="produk">
     <!-- Produk akan muncul di sini -->
 </div>
 
 <script>
-    // DATA PRODUK
-    const products = [
-        {
-            id: 1,
-            name: "Produk A",
-            price: 150000
-        },
-        {
-            id: 2,
-            name: "Produk B",
-            price: 250000
-        }
-    ];
+// AMBIL DATA DARI LOCALSTORAGE ATAU DEFAULT
+let products = JSON.parse(localStorage.getItem("products")) || [
+    { id: 1, name: "Produk A", price: 150000, description: "Produk berkualitas tinggi" },
+    { id: 2, name: "Produk B", price: 250000, description: "Performa maksimal" }
+];
 
-    // AMBIL CONTAINER
-    const container = document.getElementById("produk");
+const container = document.getElementById("produk");
 
-    // LOOPING DATA
+// RENDER PRODUK
+function renderProducts() {
+    container.innerHTML = "";
     products.forEach(product => {
         container.innerHTML += `
             <div class="card">
                 <h3>${product.name}</h3>
-                <div class="price">Rp ${product.price}</div>
-                <button>Lihat Detail</button>
+                <div class="price">Rp ${product.price.toLocaleString()}</div>
+                <p>${product.description || ""}</p>
+                <button onclick="deleteProduct(${product.id})">Hapus</button>
             </div>
         `;
     });
+}
+
+// HAPUS PRODUK
+function deleteProduct(id) {
+    products = products.filter(p => p.id !== id);
+    localStorage.setItem("products", JSON.stringify(products));
+    renderProducts();
+}
+
+// TAMBAH PRODUK
+document.getElementById("formTambah").addEventListener("submit", function(e){
+    e.preventDefault();
+    const nama = document.getElementById("namaProduk").value.trim();
+    const harga = parseInt(document.getElementById("hargaProduk").value);
+    const desc = document.getElementById("descProduk").value.trim();
+
+    if(nama && harga){
+        const newProduct = {
+            id: Date.now(),
+            name: nama,
+            price: harga,
+            description: desc
+        };
+        products.push(newProduct);
+        localStorage.setItem("products", JSON.stringify(products));
+        renderProducts();
+        this.reset();
+    }
+});
+
+// RENDER PERTAMA KALI
+renderProducts();
 </script>
 
 </body>
