--- a/index.html
+++ b/index.html
@@ -4,85 +4,54 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Katalog Produk Dinamis</title>
-
 <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background: #f5f5f5;
-}
-
-h1 { text-align: center; }
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.card {
-    background: white;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-}
-
-.price { color: red; font-weight: bold; }
-
-button {
-    margin-top: 10px;
-    padding: 8px 12px;
-    border: none;
-    background: #333;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-form {
-    max-width: 500px;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-input, textarea {
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
+body { font-family: Arial; margin:0; padding:20px; background:#f5f5f5; }
+h1 { text-align:center; }
+.container { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:30px; }
+.card { background:white; padding:15px; border-radius:10px; box-shadow:0 5px 10px rgba(0,0,0,0.1); }
+.price { color:red; font-weight:bold; }
+button { margin-top:10px; padding:8px 12px; border:none; background:#333; color:white; border-radius:5px; cursor:pointer; }
+form { max-width:500px; margin:20px auto; display:flex; flex-direction:column; gap:10px; }
+input, textarea { padding:8px; border-radius:5px; border:1px solid #ccc; }
+#produkDetail img { width:150px; border-radius:8px; cursor:pointer; margin:5px; }
+#produkDetail button.back { margin-bottom:15px; background:#555; }
 </style>
 </head>
-
 <body>
 
 <h1>Katalog Produk Dinamis</h1>
 
-<!-- FORM TAMBAH PRODUK -->
+<!-- Form Tambah Produk -->
 <form id="formTambah">
     <input type="text" id="namaProduk" placeholder="Nama Produk" required>
     <input type="number" id="hargaProduk" placeholder="Harga Produk" required>
     <textarea id="descProduk" placeholder="Deskripsi Produk"></textarea>
+    <input type="text" id="imagesProduk" placeholder="URL gambar, pisahkan dengan koma">
     <button type="submit">Tambah Produk</button>
 </form>
 
-<div class="container" id="produk">
-    <!-- Produk akan muncul di sini -->
-</div>
+<!-- Daftar Produk -->
+<div class="container" id="produk"></div>
+
+<!-- Detail Produk -->
+<div id="produkDetail" style="display:none;"></div>
+
+<!-- Panggil data.js -->
+<script src="data.js"></script>
 
 <script>
-// AMBIL DATA DARI LOCALSTORAGE ATAU DEFAULT
-let products = JSON.parse(localStorage.getItem("products")) || [
-    { id: 1, name: "Produk A", price: 150000, description: "Produk berkualitas tinggi" },
-    { id: 2, name: "Produk B", price: 250000, description: "Performa maksimal" }
-];
+// Ambil data dari LocalStorage atau default
+let products = JSON.parse(localStorage.getItem("products")) || defaultProducts;
+
+// Simpan ke LocalStorage saat pertama kali load
+if(!localStorage.getItem("products")){
+    localStorage.setItem("products", JSON.stringify(defaultProducts));
+}
 
 const container = document.getElementById("produk");
+const detail = document.getElementById("produkDetail");
 
-// RENDER PRODUK
+// Render daftar produk
 function renderProducts() {
     container.innerHTML = "";
     products.forEach(product => {
@@ -91,32 +60,77 @@ function renderProducts() {
                 <h3>${product.name}</h3>
                 <div class="price">Rp ${product.price.toLocaleString()}</div>
                 <p>${product.description || ""}</p>
+                <button onclick="showDetail(${product.id})">Lihat Detail</button>
                 <button onclick="deleteProduct(${product.id})">Hapus</button>
             </div>
         `;
     });
 }
 
-// HAPUS PRODUK
+// Hapus produk
 function deleteProduct(id) {
     products = products.filter(p => p.id !== id);
     localStorage.setItem("products", JSON.stringify(products));
     renderProducts();
 }
 
-// TAMBAH PRODUK
+// Tampilkan detail produk
+function showDetail(id){
+    const product = products.find(p => p.id === id);
+    container.style.display = "grid";
+    detail.style.display = "block";
+    container.style.display = "none";
+
+    detail.innerHTML = `
+        <button class="back" onclick="backToList()">← Kembali</button>
+        <h2>${product.name}</h2>
+        <div class="price">Rp ${product.price.toLocaleString()}</div>
+        <p>${product.description}</p>
+        <div id="lightboxGallery">
+            ${product.images.map(img => `<img src="${img}" onclick="openLightbox('${img}')">`).join('')}
+        </div>
+    `;
+}
+
+// Kembali ke daftar
+function backToList(){
+    container.style.display = "grid";
+    detail.style.display = "none";
+}
+
+// Lightbox sederhana
+function openLightbox(img){
+    const overlay = document.createElement("div");
+    overlay.style.position="fixed";
+    overlay.style.top="0";
+    overlay.style.left="0";
+    overlay.style.width="100%";
+    overlay.style.height="100%";
+    overlay.style.background="rgba(0,0,0,0.8)";
+    overlay.style.display="flex";
+    overlay.style.alignItems="center";
+    overlay.style.justifyContent="center";
+    overlay.style.cursor="pointer";
+    overlay.innerHTML = `<img src="${img}" style="max-width:90%; max-height:90%; border-radius:10px;">`;
+    overlay.onclick = ()=> overlay.remove();
+    document.body.appendChild(overlay);
+}
+
+// Form tambah produk baru
 document.getElementById("formTambah").addEventListener("submit", function(e){
     e.preventDefault();
     const nama = document.getElementById("namaProduk").value.trim();
     const harga = parseInt(document.getElementById("hargaProduk").value);
     const desc = document.getElementById("descProduk").value.trim();
+    const images = document.getElementById("imagesProduk").value.split(",").map(i=>i.trim()).filter(i=>i);
 
     if(nama && harga){
         const newProduct = {
             id: Date.now(),
             name: nama,
             price: harga,
-            description: desc
+            description: desc,
+            images: images.length ? images : ["https://via.placeholder.com/400x300"]
         };
         products.push(newProduct);
         localStorage.setItem("products", JSON.stringify(products));
@@ -125,7 +139,7 @@ document.getElementById("formTambah").addEventListener("submit", function(e){
     }
 });
 
-// RENDER PERTAMA KALI
+// Render awal
 renderProducts();
 </script>
 
